--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <span>This website is made by Osama @2020</span>
 
         </footer>
-        <!-- <script src="js/scripts.js"></script> -->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
