--- a/index.html
+++ b/index.html
@@ -2,7 +2,67 @@
 <html>
     <head>
         <title>Cats</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <!-- <link rel="stylesheet" href="css/styles.css"> -->
+        <style>
+            body {
+    background-color: #f5f5f5;
+}
+header nav{
+    text-align: center;
+
+}
+header nav a{
+    font-size: 20px;
+    margin-right: 100px;
+    color: black;
+    font-weight: bolder;
+    
+}
+header h1{
+    background-color: rgb(196, 193, 193);
+    color: rgb(47, 100, 47);
+    text-align: center;
+}
+main h2{
+    color: rgb(238, 71, 71);
+    font-size: xx-large;
+    margin-left: 30px;
+}
+main p{
+    font-size: 20px;
+    margin-left: 30px;
+}
+#qus-1{
+    background-color: royalblue;
+    color: rgb(238, 231, 231);
+}
+#qus-2{
+    background-color: rgb(247, 68, 68);
+    color: black;
+}
+#qus-3{
+    background-color: rgb(2, 2, 2);
+    color: rgb(243, 75, 75);
+}
+#qus-4{
+    background-color: rgb(1, 59, 1);
+    color: rgb(170, 164, 164);
+}
+footer{
+    text-align: center;
+    margin-top: 100px;
+   
+}
+footer span{
+    font-size: x-large;
+    color: red;
+    padding: 10px 20px;
+    border: 1px solid red;
+   
+   
+   
+}
+        </style>
     </head>
     <body>
         <header>
@@ -25,6 +85,21 @@
             <span>This website is made by Osama @2020</span>
 
         </footer>
-        <script src="js/scripts.js"></script>
+        <script>
+            var userName = prompt('What is your name ?');   
+            alert('Hi there'+ ' Your name is ' + userName);
+            console.log("The user's name is "+userName);
+            var userAge = prompt('How old are you ?');
+            alert('Hi there ' + userName +','+ ' Your age is ' + userAge);
+            console.log("The user's age is "+userAge);
+            var userColor = prompt('what is your fav color ?');
+            alert('Hi there ' + userName +','+ ' Your age is ' + userAge +','+' Your fav color is ' + userColor);
+            console.log("The user's fav color is "+userColor);
+            var userType = prompt('what is your fav type of cats ?');
+            alert('Hi there ' + userName +','+ ' Your age is ' + userAge +','+' Your fav color is ' + userColor +',' + ' and' +' your fav type of cats is ' + userType);
+
+
+        </script>
+        <!-- <script src="js/scripts.js"></script> -->
     </body>
 </html>
